# ChangeLog for dev-util/qgit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/ChangeLog,v 1.28 2007/09/17 11:14:55 jokey Exp $

*qgit-1.5.7 (17 Sep 2007)

  17 Sep 2007; Markus Ullmann <jokey@gentoo.org> -qgit-1.5.5.ebuild,
  +qgit-1.5.7.ebuild:
  Version bump wrt security bug #190697

  05 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> qgit-1.5.6.ebuild:
  ppc stable, bug #187270

  03 Aug 2007; Christoph Mende <angelos@gentoo.org> qgit-1.5.6.ebuild:
  Stable on amd64 wrt bug #187270

  01 Aug 2007; Markus Rothe <corsair@gentoo.org> qgit-1.5.6.ebuild:
  Stable on ppc64; bug #187270

  31 Jul 2007; Markus Ullmann <jokey@gentoo.org> qgit-1.5.6.ebuild:
  Stable on x86 wrt bug #187270

*qgit-1.5.6 (05 Jun 2007)

  05 Jun 2007; Markus Ullmann <jokey@gentoo.org> -qgit-1.5.3.ebuild,
  +qgit-1.5.6.ebuild:
  Version bump

  14 Apr 2007; Peter Weller <welp@gentoo.org> qgit-1.5.5.ebuild:
  Stable on amd64 wrt bug 173331

  08 Apr 2007; Markus Rothe <corsair@gentoo.org> qgit-1.5.5.ebuild:
  Stable on ppc64; bug #173331

  06 Apr 2007; nixnut <nixnut@gentoo.org> qgit-1.5.5.ebuild:
  Stable on ppc wrt bug 173331

  04 Apr 2007; Raúl Porcel <armin76@gentoo.org> qgit-1.5.5.ebuild:
  x86 stable wrt bug 173331

*qgit-1.5.5 (26 Feb 2007)

  26 Feb 2007; Fernando J. Pereda <ferdy@gentoo.org> -qgit-1.5.2.ebuild,
  -qgit-1.5.4.ebuild, +qgit-1.5.5.ebuild:
  New upstream version. Remove unused versions.

  15 Feb 2007; Christian Faulhammer <opfer@gentoo.org> qgit-1.5.3.ebuild:
  stable x86; bug 167018

*qgit-1.5.4 (15 Feb 2007)

  15 Feb 2007; Fernando J. Pereda <ferdy@gentoo.org> +qgit-1.5.4.ebuild:
  New upstream version.

*qgit-1.5.3 (14 Nov 2006)

  14 Nov 2006; Fernando J. Pereda <ferdy@gentoo.org> -qgit-1.1.1.ebuild,
  -qgit-1.2.ebuild, -qgit-1.4.ebuild, -qgit-1.5.1.ebuild,
  +qgit-1.5.3.ebuild:
  New upstream version. Cleanup old ones.

*qgit-1.5.2 (30 Sep 2006)
