@@ -11,14 +11,14 @@ EBUILD qgit-1.5.7.ebuild 631 RMD160 d518fe730a96932bcbcac683a75a325279e63332 SHA
 MD5 fa7f0d4116c7d675ed130c85c83bcc17 qgit-1.5.7.ebuild 631
 RMD160 d518fe730a96932bcbcac683a75a325279e63332 qgit-1.5.7.ebuild 631
 SHA256 9f46630c0830cc8c2366c994d194563c977a3e204e29114caa90dda0e728b366 qgit-1.5.7.ebuild 631
-MISC ChangeLog 3922 RMD160 b51514ac12765b176a6f02214af58c3c4b8a097a SHA1 9a029a5de79fbd570942d56bba4f8e0df6cdc44d SHA256 edc2f83bec5746c916b4d2dae6e8767aa44ed7e683531cb07063c4fc5c8522b1
-MD5 38cc96c52782d90f7455bb1ca11efaed ChangeLog 3922
-RMD160 b51514ac12765b176a6f02214af58c3c4b8a097a ChangeLog 3922
-SHA256 edc2f83bec5746c916b4d2dae6e8767aa44ed7e683531cb07063c4fc5c8522b1 ChangeLog 3922
-MISC metadata.xml 255 RMD160 db414d29c445e388d486f826b368b5359b74f72d SHA1 0317bb4c83bba580ddb586efe8a929b85759d0d2 SHA256 45f65b01b99f13e87c53843765ab287065988ab80e675287cdcc81ce3e22f9a2
-MD5 c2a7223a6caa6908d13db012ce74b388 metadata.xml 255
-RMD160 db414d29c445e388d486f826b368b5359b74f72d metadata.xml 255
-SHA256 45f65b01b99f13e87c53843765ab287065988ab80e675287cdcc81ce3e22f9a2 metadata.xml 255
+MISC ChangeLog 4029 RMD160 66b94b7649a54e4ca9e2c2e1b6352d3fd0271c4d SHA1 4f2f5f3d224a944d2c8621ea37769534b7664d33 SHA256 44d3ddcb75b1a105171f1ae710137187be25b110610278476df4b02526c1834b
+MD5 ca77a0142003cd0f276d5db16ef173e1 ChangeLog 4029
+RMD160 66b94b7649a54e4ca9e2c2e1b6352d3fd0271c4d ChangeLog 4029
+SHA256 44d3ddcb75b1a105171f1ae710137187be25b110610278476df4b02526c1834b ChangeLog 4029
+MISC metadata.xml 355 RMD160 40095a95a3da87fbeb90935a3cb87f127e69da73 SHA1 593165765748f984713db01571743c95aaa52748 SHA256 97365c6b6404edf5aff35ba59dcf22517d9f32704de74a23ed1974f46e61b88a
+MD5 341fb0a60f92bdfc876c8a0798b38979 metadata.xml 355
+RMD160 40095a95a3da87fbeb90935a3cb87f127e69da73 metadata.xml 355
+SHA256 97365c6b6404edf5aff35ba59dcf22517d9f32704de74a23ed1974f46e61b88a metadata.xml 355
 MD5 dfd61b210039d93b7dfa0207f4a666d2 files/digest-qgit-1.5.6 235
 RMD160 a2dc9fb284d8240792ec5b5c371b49f676694baa files/digest-qgit-1.5.6 235
 SHA256 c0191028aed9be78b198bc3b7e45648a19b9fdb5849a620959bdf0e5f58b8ff9 files/digest-qgit-1.5.6 235
@@ -28,7 +28,7 @@ SHA256 5fb6bbfd470df85eb13ced20ac26418db6aac1629b2d1f8645fb77e261f604be files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFG7mG7z974XjDVpbkRAhmDAJ9bF7t9I3E9vPR4AWzwvshpjQDapQCfWDzk
-FjXmYCdhf5siqgNW5UxXf2s=
-=hXvz
+iD8DBQFG7mMHz974XjDVpbkRAvSKAKDaBiF5MEmplyrzhDHiJczEfPBrIwCdGCKN
+JYjJvxxUg3qNLbq54ADnyQI=
+=8K6r
 -----END PGP SIGNATURE-----
